Implemented Item CRUD operations
